Fix overflow issue in style.css

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -20,6 +20,7 @@
     margin-top: 5rem;  
     text-transform: uppercase; 
     text-align: center;
+    box-sizing: padding-box;  
 }
 
 .contact-header{
@@ -61,3 +62,26 @@
 }
 
 
+/*Media screen min-width 768px*/
+
+@media only screen and (min-width: 768px){
+    
+}
+
+/*Media screen max-width 767px*/
+
+@media only screen and (max-width: 767px){
+
+}
+
+/*Media screen max-width 576px*/
+
+@media only screen and (max-width: 576px){
+
+}
+
+/*Media screen max-height 400px*/
+
+@media only screen and (max-height: 400px){
+
+}
