--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,6 @@ html, body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
     height: 100vh;
     color: #00FF7F;
     font-family: 'Orbitron', sans-serif;
